fixed dark mode font issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,18 +12,10 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: #F7F7F7; 
+  color: #171717;
   font-family: Arial, Helvetica, sans-serif;
-  background: #F7F7F7;
 }
 
 .rounded-img {
